# eukaryote

./: .coverage  dev_pyproject.toml  log.csv  setup.cfg  setup.py
eukaryote.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
