[metadata]
name = eukaryote
version = 0.0.1

[options]
packages = eukaryote
install_requires =
    flair
    lru-dict
    nltk
    lemminflect
    pandas
    bert-score
    editdistance
    filelock
    language-tool-python
    datasets
    numpy
    scipy
    torch
    PySocks
    pinyin
    click
    matplotlib
    requests
    scikit-learn
    tabulate
    torchfile
    transformers
    OpenHowNet
    jieba
    pycld2
    terminaltables
    tqdm
    word2number
    num2words
    more-itertools
    tensorflow-text
    tf-models-official
    stanza
    pytest

[options.entry_points]
console_scripts =
    eukaryote = eukaryote.commands.textattack_cli:main